| Summary: | ASTERISK-25427: Callerid change does not always emit NewCallerid AMI event | ||
| Reporter: | Ivan Poddubny (ipoddubny) | Labels: | |
| Date Opened: | 2015-09-28 02:21:09 | Date Closed: | 2015-09-29 16:30:09 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/General |
| Versions: | 11.19.0 | Frequency of Occurrence | Frequent |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | In the following dialplan only the first Set(CALLERID(num)) emits NewCallerid event, but the next two do not. The first Set(CALLERID(name)) also sends a NewCallerid, but not the second one.
{noformat} exten => 888,1,NoOp(callerid test) same => n,Set(CALLERID(num)=444) same => n,NoOp(${CALLERID(num)}) same => n,Set(CALLERID(num)=555) same => n,NoOp(${CALLERID(num)}) same => n,Set(CALLERID(num)=666) same => n,NoOp(${CALLERID(num)}) same => n,Set(CALLERID(name)=Abcd) same => n,NoOp(${CALLERID(name)}) same => n,Set(CALLERID(name)=Abce) same => n,NoOp(${CALLERID(name)}) same => n,Hangup {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-09-28 02:21:10.680-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||